samples/_failures_safe/1761351266_24d99b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5ebfd6f.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_f5ebfd6f.c:174:19: error: expected ‘)’ at end of input
  174 |         if (parser
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_f5ebfd6f.c:174:9: error: expected declaration or statement at end of input
  174 |         if (parser
      |         ^~
./samples/SAFE/__tmp_f5ebfd6f.c:174:9: error: expected declaration or statement at end of input
